# tum-ui

./: .gitignore  CMakeLists.txt  README.md  de.home_ui.cli.yml  de.tum_ui.cli.appdata.xml  de.tum_ui.cli.yml  tum_ui.service
.github/workflows/: flatpak.yml
cmake/: gcc_analyze.cmake
flatpak/patches/: offline_build.patch
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/eatApi/: CMakeLists.txt  Canteen.cpp  Canteen.hpp  Dish.cpp  Dish.hpp  EatApiHelper.cpp  EatApiHelper.hpp  HeadCount.cpp  HeadCount.hpp  Label.cpp  Label.hpp  iso_week.hpp
src/backend/mvg/: Departure.cpp  Departure.hpp  MvgHelper.cpp
src/backend/storage/: Serializer.cpp  Settings.cpp  Settings.hpp
src/backend/systemUtils/: SystemUtils.cpp
src/backend/weather/: OpenWeatherHelper.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/ui/: UiContext.cpp
src/ui/widgets/: CMakeLists.txt  CanteenHeadCountWidget.cpp  CanteenHeadCountWidget.hpp  CanteenWidget.cpp  CanteenWidget.hpp  CreditsWidget.cpp  CreditsWidget.hpp  DepartureWidget.cpp  DishWidget.cpp  DishWidget.hpp  MvgWidget.cpp  SettingsWidget.cpp  SettingsWidget.hpp  WeatherWidget.cpp
src/ui/windows/: MainWindow.cpp  MainWindow.hpp
